# python-pip.sonoff-ewelink-cube-client-api

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.devcontainer/: Dockerfile.dev  devcontainer.json
.devcontainer/script/: bootstrap.sh  setup.sh
.pre-commit-hooks/: pre-commit-nbsp-check.sh
examples/: example_api.py  example_api_access_token.py  example_api_devices.py  example_api_sounds.py  example_api_thirdparty.py  example_events.py  example_helpers.py
src/sonoff_ewelink_cube_client_api/: __init__.py
src/sonoff_ewelink_cube_client_api/api/: __init__.py  baseClass.py  baseClassBridge.py  baseClassDevice.py  baseClassHardware.py  baseClassSse.py  ihostClass.py  nspanelproClass.py
src/sonoff_ewelink_cube_client_api/config/: __init__.py
src/sonoff_ewelink_cube_client_api/errors/: __init__.py
src/sonoff_ewelink_cube_client_api/ts/: __init__.py
src/sonoff_ewelink_cube_client_api/ts/enum/: ECapability.py  ECategory.py  EDiscoveryDevices.py  EHardware.py  EMethod.py  EPath.py  EResponse.py  __init__.py
src/sonoff_ewelink_cube_client_api/ts/error/: EDiscoveryDevice.py
src/sonoff_ewelink_cube_client_api/ts/interface/: IConfig.py  IDebugLog.py  IDevice.py  IHttpConfig.py  (+5 more)
src/sonoff_ewelink_cube_client_api/utils/: __init__.py  httpUtils.py
tests/: test_ts_enum_BaseEnum.py  test_ts_enum_ECapability.py  test_ts_enum_ECategory.py  test_ts_enum_EHardware.py  test_ts_enum_EMethod.py  test_ts_enum_EPath.py  test_ts_enum_EResponse.py  test_ts_interface_IResponse.py
(+4 files in other folders)
